// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult component should render empty search result 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "elevation": 2,
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 1.5,
      }
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "#F8F9FF",
              "flexDirection": "row",
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F2F8",
                "borderRadius": 100,
                "boxShadow": Object {
                  "elevation": 1,
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 1,
                },
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              }
            }
            testID="undefined-selected"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#353E6E",
                    "fontFamily": "BeVietnamPro-Medium",
                    "fontSize": 13,
                  },
                  Object {},
                  Array [
                    Object {},
                    Object {
                      "color": "#353E6E",
                    },
                  ],
                ]
              }
            >
              Date posted
            </Text>
          </View>
          <View
            style={
              Object {
                "height": undefined,
                "paddingHorizontal": undefined,
                "paddingVertical": undefined,
                "width": 8,
              }
            }
          />
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F2F8",
                "borderRadius": 100,
                "boxShadow": Object {
                  "elevation": 1,
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 1,
                },
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              }
            }
            testID="undefined-selected"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#353E6E",
                    "fontFamily": "BeVietnamPro-Medium",
                    "fontSize": 13,
                  },
                  Object {},
                  Array [
                    Object {},
                    Object {
                      "color": "#353E6E",
                    },
                  ],
                ]
              }
            >
              Created by
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "marginTop": 2,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View />
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 13,
          },
          Object {
            "color": "#353E6E",
          },
          Object {
            "flex": 1,
            "marginLeft": 8,
          },
        ]
      }
    >
      Searched results are removed all text formats to make sure looking the precise content
    </Text>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    ListEmptyComponent={[Function]}
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "height": 16,
              "paddingHorizontal": undefined,
              "paddingVertical": undefined,
              "width": undefined,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginTop": 24,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "height": 320,
                "maxHeight": 160,
                "maxWidth": 240,
                "width": 480,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../assets/images/img_empty_search_post.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Light",
                "fontSize": 15,
              },
              Object {},
              Object {
                "color": "#767D93",
                "textAlign": "center",
              },
            ]
          }
        >
          Sorry, we couldn’t find anything related
to your search.
        </Text>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "paddingVertical": 16,
            }
          }
        >
          <ActivityIndicator
            color="#D1D4DB"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SearchResult component should render list search result 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "elevation": 2,
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 1.5,
      }
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "#F8F9FF",
              "flexDirection": "row",
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F2F8",
                "borderRadius": 100,
                "boxShadow": Object {
                  "elevation": 1,
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 1,
                },
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              }
            }
            testID="undefined-selected"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#353E6E",
                    "fontFamily": "BeVietnamPro-Medium",
                    "fontSize": 13,
                  },
                  Object {},
                  Array [
                    Object {},
                    Object {
                      "color": "#353E6E",
                    },
                  ],
                ]
              }
            >
              Date posted
            </Text>
          </View>
          <View
            style={
              Object {
                "height": undefined,
                "paddingHorizontal": undefined,
                "paddingVertical": undefined,
                "width": 8,
              }
            }
          />
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F2F8",
                "borderRadius": 100,
                "boxShadow": Object {
                  "elevation": 1,
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 1,
                },
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              }
            }
            testID="undefined-selected"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#353E6E",
                    "fontFamily": "BeVietnamPro-Medium",
                    "fontSize": 13,
                  },
                  Object {},
                  Array [
                    Object {},
                    Object {
                      "color": "#353E6E",
                    },
                  ],
                ]
              }
            >
              Created by
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "marginTop": 2,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View />
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 13,
          },
          Object {
            "color": "#353E6E",
          },
          Object {
            "flex": 1,
            "marginLeft": 8,
          },
        ]
      }
    >
      Searched results are removed all text formats to make sure looking the precise content
    </Text>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    ListEmptyComponent={[Function]}
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "actor": Object {
            "avatar": "https://bein-entity-attribute-sandbox.s3.ap-southeast-1.amazonaws.com/user/avatar/images/original/a0f2b4bb-abf7-423d-9fed-0b706751b323.jpg",
            "fullname": "Nguyễn Thị Ngọc Linh",
            "id": "33",
            "username": "ngoclinh",
          },
          "audience": Object {
            "groups": Array [
              Object {
                "child": Array [
                  "139",
                  "2",
                  "10",
                  "152",
                  "66",
                  "67",
                  "103",
                  "2",
                  "2",
                ],
                "icon": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/group/avatar/Avatar_Group.png",
                "id": "1",
                "name": "EVOL Community",
              },
            ],
          },
          "commentsCount": 0,
          "content": "Important post",
          "createdAt": "2022-04-20T10:06:45.649Z",
          "createdBy": 33,
          "highlight": "==Important== post",
          "id": "29",
          "isDraft": false,
          "media": Object {
            "files": Array [],
            "images": Array [],
            "videos": Array [],
          },
          "mentions": Array [],
          "ownerReactions": Array [],
          "reactionsCount": Object {},
          "setting": Object {
            "canComment": true,
            "canReact": true,
            "canShare": true,
            "importantExpiredAt": "2022-04-20T11:07:08.129Z",
            "isImportant": true,
          },
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "height": 16,
              "paddingHorizontal": undefined,
              "paddingVertical": undefined,
              "width": undefined,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="post_view"
        >
          <View
            style={
              Object {
                "backgroundColor": "#7335C0",
                "borderBottomLeftRadius": 8,
                "borderBottomRightRadius": 8,
                "left": 0,
                "paddingBottom": 4,
                "paddingHorizontal": 4,
                "paddingTop": 8,
                "position": "absolute",
                "top": 0,
                "zIndex": 1,
              }
            }
            testID="post_view.important_status_lite"
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      Object {
                        "backgroundColor": "#FFFFFF",
                        "borderRadius": 4,
                        "padding": 2,
                      },
                    ]
                  }
                >
                  <View>
                    <View
                      style={
                        Array [
                          Object {
                            "overflow": "hidden",
                          },
                          Object {
                            "height": 12,
                            "width": 12,
                          },
                        ]
                      }
                    >
                      <FastImageView
                        onFastImageError={[Function]}
                        resizeMode="cover"
                        size={12}
                        source={null}
                        style={
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "elevation": 2,
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.12,
                  "shadowRadius": 1.5,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "marginHorizontal": 16,
                  "opacity": 1,
                  "paddingTop": 8,
                }
              }
              testID="content_header"
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "marginRight": 12,
                    "marginTop": 4,
                    "opacity": 1,
                  }
                }
                testID="button_wrapper"
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 8,
                        "height": 48,
                        "width": 48,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <View
                    style={
                      Array [
                        Array [
                          Object {
                            "borderRadius": 8,
                            "height": 48,
                            "width": 48,
                          },
                          Object {
                            "borderRadius": 24,
                          },
                        ],
                        Object {},
                      ]
                    }
                    testID="avatar_container"
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "overflow": "hidden",
                          },
                          Array [
                            Array [
                              Object {
                                "borderRadius": 8,
                                "height": 48,
                                "width": 48,
                              },
                              Object {
                                "borderRadius": 24,
                              },
                            ],
                            Object {
                              "borderColor": "#F2F5F8",
                              "borderWidth": 2,
                            },
                            Object {
                              "backgroundColor": "#FFFFFF",
                            },
                          ],
                        ]
                      }
                    >
                      <FastImageView
                        onFastImageError={[Function]}
                        resizeMode="cover"
                        source={
                          Object {
                            "uri": "https://bein-entity-attribute-sandbox.s3.ap-southeast-1.amazonaws.com/user/avatar/images/original/a0f2b4bb-abf7-423d-9fed-0b706751b323.jpg",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                        }
                        testID="avatar.image"
                      />
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignSelf": "flex-start",
                      "marginRight": 12,
                      "opacity": 1,
                    }
                  }
                  testID="button_wrapper"
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#212745",
                          "fontFamily": "BeVietnamPro-Medium",
                          "fontSize": 15,
                        },
                        Object {
                          "color": "#181C32",
                        },
                        undefined,
                      ]
                    }
                    testID="content_header.actor"
                  >
                    Nguyễn Thị Ngọc Linh
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "marginVertical": 4,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#212745",
                          "fontFamily": "BeVietnamPro-Light",
                          "fontSize": 13,
                        },
                        Object {
                          "color": "#353E6E",
                        },
                        Object {
                          "marginRight": 4,
                        },
                      ]
                    }
                  >
                    to
                  </Text>
                  <Text
                    onPress={[Function]}
                    style={
                      Array [
                        Object {
                          "color": "#212745",
                          "fontFamily": "BeVietnamPro-Medium",
                          "fontSize": 13,
                        },
                        Object {
                          "color": "#181C32",
                        },
                        undefined,
                      ]
                    }
                    testID="content_header.audiences"
                  >
                    EVOL Community
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#212745",
                          "fontFamily": "BeVietnamPro-Light",
                          "fontSize": 11,
                        },
                        Object {
                          "color": "#353E6E",
                        },
                        undefined,
                      ]
                    }
                    testID="time_view"
                  >
                    Apr 20 at 05:06 PM
                  </Text>
                </View>
              </View>
              <View
                style={Object {}}
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 6,
                      },
                      undefined,
                    ]
                  }
                  testID="content_header.menu"
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "borderRadius": 6,
                          "elevation": 2,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "shadowColor": "rgba(0, 0, 0, 1)",
                          "shadowOffset": Object {
                            "height": 2,
                            "width": 0,
                          },
                          "shadowOpacity": 0.12,
                          "shadowRadius": 1.5,
                        },
                        undefined,
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "height": 28,
                          "paddingHorizontal": 8,
                        },
                      ]
                    }
                    testID="button.content"
                  >
                    <View
                      accessibilityState={
                        Object {
                          "disabled": true,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={false}
                      hitSlop={
                        Object {
                          "bottom": 10,
                          "left": 10,
                          "right": 10,
                          "top": 10,
                        }
                      }
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            undefined,
                            Object {
                              "backgroundColor": undefined,
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              undefined,
                              undefined,
                              undefined,
                            ]
                          }
                        >
                          <View
                            testID="button.icon"
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "marginHorizontal": 16,
                    "marginVertical": 8,
                  }
                }
              >
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  testID="post_view_content"
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 8,
                }
              }
              testID="content_footer_lite"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#212745",
                        "fontFamily": "BeVietnamPro-Light",
                        "fontSize": 13,
                      },
                      Object {},
                      undefined,
                    ]
                  }
                >
                  0 React
                </Text>
                <View
                  style={
                    Object {
                      "height": undefined,
                      "paddingHorizontal": undefined,
                      "paddingVertical": undefined,
                      "width": 16,
                    }
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#212745",
                        "fontFamily": "BeVietnamPro-Light",
                        "fontSize": 13,
                      },
                      Object {},
                      undefined,
                    ]
                  }
                  testID="content_footer_lite.comment_text"
                >
                  0 Comment
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-end",
                      "paddingBottom": 6,
                      "paddingHorizontal": 16,
                      "paddingTop": 12,
                    },
                    Object {
                      "alignItems": "center",
                      "paddingBottom": 0,
                      "paddingHorizontal": 0,
                      "paddingTop": 0,
                    },
                  ]
                }
                testID="content_interested_user_count"
              >
                <View
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="content_interested_user_count.button"
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#212745",
                          "fontFamily": "BeVietnamPro-Light",
                          "fontSize": 13,
                        },
                        Object {
                          "color": "#353E6E",
                        },
                        undefined,
                      ]
                    }
                    testID="content_interested_user_count.show_text"
                  >
                    Interested by 
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#212745",
                            "fontFamily": "BeVietnamPro-Medium",
                            "fontSize": 13,
                          },
                          Object {
                            "color": "#353E6E",
                          },
                          undefined,
                        ]
                      }
                    >
                      0
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "paddingVertical": 16,
            }
          }
        >
          <ActivityIndicator
            color="#D1D4DB"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SearchResult component should render loading search result 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "elevation": 2,
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 1.5,
      }
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "#F8F9FF",
              "flexDirection": "row",
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F2F8",
                "borderRadius": 100,
                "boxShadow": Object {
                  "elevation": 1,
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 1,
                },
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              }
            }
            testID="undefined-selected"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#353E6E",
                    "fontFamily": "BeVietnamPro-Medium",
                    "fontSize": 13,
                  },
                  Object {},
                  Array [
                    Object {},
                    Object {
                      "color": "#353E6E",
                    },
                  ],
                ]
              }
            >
              Date posted
            </Text>
          </View>
          <View
            style={
              Object {
                "height": undefined,
                "paddingHorizontal": undefined,
                "paddingVertical": undefined,
                "width": 8,
              }
            }
          />
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F2F8",
                "borderRadius": 100,
                "boxShadow": Object {
                  "elevation": 1,
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 1,
                },
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              }
            }
            testID="undefined-selected"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#353E6E",
                    "fontFamily": "BeVietnamPro-Medium",
                    "fontSize": 13,
                  },
                  Object {},
                  Array [
                    Object {},
                    Object {
                      "color": "#353E6E",
                    },
                  ],
                ]
              }
            >
              Created by
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "marginTop": 2,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View />
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 13,
          },
          Object {
            "color": "#353E6E",
          },
          Object {
            "flex": 1,
            "marginLeft": 8,
          },
        ]
      }
    >
      Searched results are removed all text formats to make sure looking the precise content
    </Text>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    ListEmptyComponent={[Function]}
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "height": 16,
              "paddingHorizontal": undefined,
              "paddingVertical": undefined,
              "width": undefined,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "paddingVertical": 16,
            }
          }
        >
          <ActivityIndicator
            color="#D1D4DB"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
